2002-04-24  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs: Fix the case where the argument to params if the
	type of the params.  I omitted handling this before.   Fixed

2002-04-22  Miguel de Icaza  <miguel@ximian.com>

	* driver.cs: Call BootCorlib_PopulateCoreType

	* class.cs (Property.CheckBase): Check for properties only, not
	for all members. 

	* interface.cs: Temporary hack: try/catch around the
	CustomAttributeBuilder, because I am getting an exception that I
	do not understand.

	* rootcontext.cs (BootCorlib_PopulateCoreType): Populate some
	types whose definitions are required to be there (attributes are
	defined before standard types).

	Compute definitions as we boot the various types, as they are used
	immediately (value_type class will need object_type, but if we do
	not initialize object_type, we will pass a null, which will let
	the runtime pick the System.Object from the existing corlib, which
	is not what we want).

2002-04-22  Patrik Torstensson <totte@labs2.com>

	* cs-tokenizer.cs: fixed a number of trim() issues.

2002-04-22  Ravi Pratap  <ravi@ximian.com>

	* expression.cs (Argument.Type): Ensure that we return the correct
	type when we have out or ref parameters [in which case we 
	append a "&"].
	
2002-04-22  Miguel de Icaza  <miguel@ximian.com>

	* class.cs (Property, Indexer): Allow extern modifier in there. 

	* typemanager.cs (InitBaseTypes): Initializes object_type and
	value_type, since those will be used early on during the bootstrap
	process to compile corlib.

	(InitCoreTypes): Move code from here to InitBaseTypes.

2002-04-21  Miguel de Icaza  <miguel@ximian.com>

	* ecore.cs (PropertyExpr): Optimize calls to Array::get_Length on
	single-dimension arrays as using the ldlen opcode.  

	Daniel Lewis discovered this optimization.  

	* typemanager.cs: Add signature for System.Array::get_Length

2002-04-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* statement.cs: report the error when the foreach does not apply to an